logs/Slang/chapter-8/8.22--dynamic_method_lookup.sv.log
name: dynamic_method_lookup
description: dynamic method selection with abstract base class
should_fail: 0
tags: 8.22
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.22--dynamic_method_lookup.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.22--dynamic_method_lookup.sv:8:2: error: language feature not yet supported
	virtual class base_cls;
	^~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.22--dynamic_method_lookup.sv:12:2: error: language feature not yet supported
	class a_cls extends base_cls;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.22--dynamic_method_lookup.sv:18:2: error: language feature not yet supported
	class b_cls extends base_cls;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.22--dynamic_method_lookup.sv:24:2: error: language feature not yet supported
	class c_cls extends base_cls;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.22--dynamic_method_lookup.sv:30:2: error: use of undeclared identifier 'base_cls'
	base_cls arr[3];
	^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.22--dynamic_method_lookup.sv:31:2: error: use of undeclared identifier 'a_cls'
	a_cls a;
	^~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.22--dynamic_method_lookup.sv:32:2: error: use of undeclared identifier 'b_cls'
	b_cls b;
	^~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.22--dynamic_method_lookup.sv:33:2: error: use of undeclared identifier 'c_cls'
	c_cls c;
	^~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.22--dynamic_method_lookup.sv:36:7: error: language feature not yet supported
		a = new;
		    ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.22--dynamic_method_lookup.sv:37:7: error: language feature not yet supported
		b = new;
		    ^~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.22--dynamic_method_lookup.sv:38:7: error: language feature not yet supported
		c = new;
		    ^~~
